@@ -11,4 +11,4 @@ Suggests: testthat,
     covr
 Imports: Rcpp, parallel, coda, stats, methods
 LinkingTo: Rcpp
-RoxygenNote: 6.0.1
+RoxygenNote: 6.0.1.9000
