@@ -1,11 +1,11 @@
 # Generated by using Rcpp::compileAttributes() -> do not edit by hand
 # Generator token: 10BE3573-1514-4C36-9D1C-5A225CD40393
 
-normal_prop <- function(x, lb, ub, scale) {
-    .Call('amcmc_normal_prop', PACKAGE = 'amcmc', x, lb, ub, scale)
+normal_prop <- function(x, lb, ub, scale, fixed) {
+    .Call('_amcmc_normal_prop', PACKAGE = 'amcmc', x, lb, ub, scale, fixed)
 }
 
-MCMCcpp <- function(fun, theta0, nbatch, lb, ub, scale) {
-    .Call('amcmc_MCMCcpp', PACKAGE = 'amcmc', fun, theta0, nbatch, lb, ub, scale)
+MCMCcpp <- function(fun, theta0, nbatch, lb, ub, scale, fixed) {
+    .Call('_amcmc_MCMCcpp', PACKAGE = 'amcmc', fun, theta0, nbatch, lb, ub, scale, fixed)
 }
 
